...
            } else {
              console.log('goBack unhandled');
            }
          }}
          title="Go back"
        />
        <Button onPress={() => dismiss()} title="Dismiss" />
        <Themed.StatusBar />
      </SafeAreaView>
    );
  }
}

...
