appId: ${APP_ID}
name: Link Component
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: link-component
      TEXT: 'Article by Gandalf'
- tapOn:
    text: 'Go to albums'
- assertVisible:
    text: 'Albums'
- tapOn:
    text: 'Go to Article'
- assertVisible:
    text: 'Article by Babel'
- tapOn:
    text: 'Replace params'
- assertVisible:
    text: 'Article by Gandalf'
- tapOn:
    text: 'Push params'
- assertVisible:
    text: 'Article by Babel fish'
- tapOn:
    text: 'Go back'
- assertVisible:
    text: 'Article by Gandalf'
- tapOn:
    text: 'Replace with albums'
- assertVisible:
    text: 'Albums'
